--- a/Pyspark Exploration Notebook.ipynb
+++ b/Pyspark Exploration Notebook.ipynb
@@ -55,12 +55,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Load and prepare data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Load in data and see what it looks like"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,22 +192,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Make \"total\" and \"pct\" columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa_cols = ['sa01', 'sa02', 'sa03']\n",
+    "se_cols = ['se01', 'se02', 'se03']\n",
+    "si_cols = ['si01', 'si02', 'si03']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "od = od.withColumn('sa_total', od.sa01+od.sa02+od.sa03)\\\n",
+    "    .withColumn('se_total', od.se01+od.se02+od.se03)\\\n",
+    "    .withColumn('si_total', od.si01+od.si02+od.si03)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cat_ls, cat_name in [(sa_cols, 'sa_total'), (se_cols, 'se_total'), (si_cols, 'si_total')]:\n",
+    "    for col in cat_ls:\n",
+    "        new = col + '_pct'\n",
+    "        od = od.withColumn(new, od[col]/od[cat_name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['w_geocode',\n",
+       " 'h_geocode',\n",
+       " 's000',\n",
+       " 'sa01',\n",
+       " 'sa02',\n",
+       " 'sa03',\n",
+       " 'se01',\n",
+       " 'se02',\n",
+       " 'se03',\n",
+       " 'si01',\n",
+       " 'si02',\n",
+       " 'si03',\n",
+       " 'createdate',\n",
+       " 'year',\n",
+       " 'h_tract',\n",
+       " 'w_tract',\n",
+       " 'sa_total',\n",
+       " 'se_total',\n",
+       " 'si_total',\n",
+       " 'sa01_pct',\n",
+       " 'sa02_pct',\n",
+       " 'sa03_pct',\n",
+       " 'se01_pct',\n",
+       " 'se02_pct',\n",
+       " 'se03_pct',\n",
+       " 'si01_pct',\n",
+       " 'si02_pct',\n",
+       " 'si03_pct']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "od.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Check out lineage and partitions of the two dataframes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(137) MapPartitionsRDD[25] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[24] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[23] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   FileScanRDD[22] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
+      "(137) MapPartitionsRDD[53] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[52] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[51] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   FileScanRDD[50] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
      ]
     }
    ],
@@ -210,17 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(33) MapPartitionsRDD[29] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[28] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[27] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   FileScanRDD[26] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
+      "(8) MapPartitionsRDD[57] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  MapPartitionsRDD[56] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  MapPartitionsRDD[55] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  FileScanRDD[54] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
      ]
     }
    ],
@@ -230,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -239,17 +334,17 @@
        "137"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "33"
+       "8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +413,7 @@
        "200"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,29 +424,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(200) MapPartitionsRDD[45] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[44] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[43] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   ZippedPartitionsRDD2[42] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[36] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   ShuffledRowRDD[35] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "+-(8) MapPartitionsRDD[34] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  ShuffledRowRDD[33] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "+-(137) MapPartitionsRDD[32] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[31] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   FileScanRDD[30] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   MapPartitionsRDD[41] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|   ShuffledRowRDD[40] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "+-(8) MapPartitionsRDD[39] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  MapPartitionsRDD[38] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
-      "|  FileScanRDD[37] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
+      "(200) MapPartitionsRDD[73] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[72] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[71] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   ZippedPartitionsRDD2[70] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[64] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   ShuffledRowRDD[63] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "+-(8) MapPartitionsRDD[62] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  ShuffledRowRDD[61] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "+-(137) MapPartitionsRDD[60] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[59] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   FileScanRDD[58] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   MapPartitionsRDD[69] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|   ShuffledRowRDD[68] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "+-(8) MapPartitionsRDD[67] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  MapPartitionsRDD[66] at javaToPython at NativeMethodAccessorImpl.java:0 []\n",
+      "|  FileScanRDD[65] at javaToPython at NativeMethodAccessorImpl.java:0 []\n"
      ]
     }
    ],
@@ -365,6 +460,48 @@
    "source": [
     "### Grouped aggregation - average travel time by year"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[year: int, avg(si01_pct): double]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "agg_df = df.groupBy(\"year\").agg(avg(\"si01_pct\"))\n",
+    "display(agg_df)\n",
+    "agg_df.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
